crates/pg_syntax/tests/snapshots/postgres_regress/join@589.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create unique index on j3(unique1, tenthous);"
---
IndexStmt@0..45
  Create@0..6 "create"
  Whitespace@6..7 " "
  Unique@7..13 "unique"
  Whitespace@13..14 " "
  Index@14..19 "index"
  Whitespace@19..20 " "
  On@20..22 "on"
  Whitespace@22..23 " "
  RangeVar@23..25
    Ident@23..25 "j3"
  Ascii40@25..26 "("
  IndexElem@26..33
    Ident@26..33 "unique1"
  Ascii44@33..34 ","
  Whitespace@34..35 " "
  IndexElem@35..43
    Ident@35..43 "tenthous"
  Ascii41@43..44 ")"
  Ascii59@44..45 ";"

