crates/pg_syntax/tests/snapshots/postgres_regress/join@70.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE t3 (name TEXT, n INTEGER);"
---
CreateStmt@0..39
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..15
    Ident@13..15 "t3"
  Whitespace@15..16 " "
  Ascii40@16..17 "("
  ColumnDef@17..26
    NameP@17..21 "name"
    Whitespace@21..22 " "
    TypeName@22..26
      TextP@22..26 "TEXT"
  Ascii44@26..27 ","
  Whitespace@27..28 " "
  ColumnDef@28..37
    Ident@28..29 "n"
    Whitespace@29..30 " "
    TypeName@30..37
      Integer@30..37 "INTEGER"
  Ascii41@37..38 ")"
  Ascii59@38..39 ";"

