crates/pg_syntax/tests/snapshots/postgres_regress/join@74.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO t2 VALUES ( 'ee', 42 );"
---
InsertStmt@0..35
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..14
    Ident@12..14 "t2"
  Whitespace@14..15 " "
  SelectStmt@15..32
    Values@15..21 "VALUES"
    Whitespace@21..22 " "
    Ascii40@22..23 "("
    Whitespace@23..24 " "
    List@24..32
      AConst@24..28
        Sconst@24..28 "'ee'"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..32
        Iconst@30..32 "42"
  Whitespace@32..33 " "
  Ascii41@33..34 ")"
  Ascii59@34..35 ";"

